Allow for Symfony v5
Replace getExtendedType with static getExtendedTypes for AbstractTypeExtension

--- a/composer.json
+++ b/composer.json
@@ -12,14 +12,14 @@
     },
     "require": {
         "php": ">=7.1",
-        "redeye/rulerz": "^1.0",
-        "symfony/form": "^3.0|^4.0",
-        "symfony/options-resolver": "^3.0|^4.0",
-        "symfony/validator": "^3.0|^4.0"
+        "redeye/rulerz": "dev-sf5",
+        "symfony/form": "^3.0|^4.0|^5.0",
+        "symfony/options-resolver": "^3.0|^4.0|^5.0",
+        "symfony/validator": "^3.0|^4.0|^5.0"
     },
     "require-dev": {
         "liip/rmt": "^1.2",
         "phpunit/phpunit": "~7.1",
-        "symfony/phpunit-bridge": "^3.0|^4.0"
+        "symfony/phpunit-bridge": "^3.0|^4.0|^5.0"
     }
 }
